POST, GET's, UPDATE and DELETE methods for Category implemented, GET by id updated to GET Active categories, this new implementation return a list with active (true) categories
